# literature-radar

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
literature_radar/: __init__.py  cli.py  enrichment.py  parser.py  profile.py  ranker.py  renderer.py  retrieval.py
