[project]
name = "literature-radar"
version = "0.1.0"
description = "arXiv paper discovery tool driven by your Zotero library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "jayu"}
]
keywords = ["arxiv", "papers", "zotero", "research", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet",
]
dependencies = [
    "bibtexparser>=1.4.1",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/notajely/literature-radar"
Documentation = "https://github.com/notajely/literature-radar#readme"
Repository = "https://github.com/notajely/literature-radar.git"
Issues = "https://github.com/notajely/literature-radar/issues"

[project.scripts]
literature-radar = "literature_radar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["literature_radar"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

